# land-explorer

patches/: cartographer_ros.patch  turtlebot3.patch  turtlebot3_simulations.patch
src/land_explorer/: CMakeLists.txt  package.xml
src/land_explorer/include/land_explorer/: node.h
src/land_explorer/launch/: setup_environment.launch
src/land_explorer/scripts/: mapping_3d_offline.sh
src/land_explorer/src/: draw_ply.cpp  land_explorer.cpp  main.cpp  mapping_3d.cpp  node.cpp  process_ply.cpp
src/land_explorer/worlds/: my_world1.world  my_world2.world
